add ui and formatting for displaying doctorCards

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 
                 <div class="form-group">
                   <label for="">What is the name of your preferred doctor?</label>
-                  <input id="docName" class="form-control" type="text" placeholder="Optional">
+                  <input id="name" class="form-control" type="text" placeholder="Optional">
                 </div>
 
                 <button class="btn btn-primary" type="submit" name="button">Search Doctors</button>
