--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,9 @@
 
                 <div class="form-group">
                   <label for="">What is the name of your preferred doctor?</label>
-                  <input id="name" class="form-control" type="text" placeholder="Optional">
+                  <input id="first_name" class="form-control" type="text" placeholder="First Name (Optional)">
+                  <br>
+                  <input id="last_name" class="form-control" type="text" placeholder="Last Name (Optional)">
                 </div>
 
                 <button class="btn btn-primary" type="submit" name="button">Search Doctors</button>
