move dummyApiData.js to spec folder for exclusion from eslint

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <div class="container-fluid">
 
       <div class="jumbotron">
-        <h1 class="display-4">Doctor Finder</h1>
+        <h1 class="display-4">FindMD</h1>
         <p class="lead"></p>
       </div>
 
@@ -23,7 +23,7 @@
               <form id="doctorForm">
 
                 <div class="form-group">
-                  <label for="">What is your ailment?</label>
+                  <label for="">What is the category of doctor you are looking for?</label>
                   <input id="ailment" class="form-control" type="text" placeholder="Required">
                 </div>
 
