add zip-code based location lookup; add specialties to doctor cards

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,16 @@
               <form id="doctorForm">
 
                 <div class="form-group">
+                  <label for="">What ZIP would you like to search within?</label>
+                  <input id="zip" class="form-control" type="number" placeholder="Required" required>
+                </div>
+
+                <div class="form-group">
+                  <label for="">What range (miles) would you like to search within?</label>
+                  <input id="range" class="form-control" type="number" placeholder="Required" required>
+                </div>
+
+                <div class="form-group">
                   <label for="">What is the category of doctor you are looking for?</label>
                   <input id="ailment" class="form-control" type="text" placeholder="Required">
                 </div>
