--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
                 </div>
 
                 <div class="form-group">
-                  <label for="">What is the category of doctor you are looking for?</label>
+                  <label for="">What is the type of doctor you are looking for?</label>
                   <input id="ailment" class="form-control" type="text" placeholder="Required">
                 </div>
 
